--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="main-nav">
         <ul class="nav">
           <li class="name">Tom Furby</li>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Experience</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="pages/experience.html">Experience</a></li>
         </ul>
     </div>
 
@@ -25,8 +25,8 @@
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I am a musician turned aspiring Web Developer. My current career takes me all over the world playing shows. So far I have played in the United States, Europe, South America and Asia. </p>
-        <p>My goal is to become a freelance Web Developer to be a career I can do from anywhere in the world. </p>
+        <p>I am a musician turned aspiring Web Developer. I play bass for a band called <em>Hillsong Young and Free</em>, based in Sydney, Australia. My current career takes me all over the world playing shows.  </p>
+        <p>Over the last 5 years I have played in North and South America, Asia, Australia, New Zealand and Europe. This year we have tours planned in Canada, United States, Europe and South America. </p>
       </div> 
 
       <div class="card">
@@ -36,20 +36,20 @@
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
+          <li>Wordpress</li>
           <li>Ruby</li>
-          <li>Rails</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        <p>I’d like to work as a freelance Web Developer creating exciting and impressive online experiences for companies and individuals.</p>
       </div> 
 
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://twitter.com/tomfurby" class="social twitter">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/tomfurby/" class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/tomfurby" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2015, Jane Smith</p>
+      <p class="copyright">&copy;2019, Tom Furby</p>
     </footer>
   </body>
   </html>
