--- a/experience.html
+++ b/experience.html
@@ -4,20 +4,20 @@
   <meta charset="utf-8">
   <title>Tom Furby's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
     <div class="main-nav">
         <ul class="nav">
           <li class="name">Tom Furby</li>
-          <li><a href="../index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="../images/profile-photo.jpg" alt="Photo of Tom Furby" class="profile-image">
+      <img src="images/profile-photo.jpg" alt="Photo of Tom Furby" class="profile-image">
       <h1 class="tag name">Hi, I’m Tom Furby</h1>
       <p class="tag location">My home is Brisbane, Australia.</p>
     </header>
@@ -32,13 +32,6 @@
         </ul> 
         <h2>Experience</h2>
         <p>I have been playing bass guitar, songwriting and producing in bands since 2009. I started touring with my current band <em>Hillsong Young and Free</em> in 2013. In that time we have released 3 full-length albums; <em>III</em> ,<em>Youth Revival</em> and <em>We Are Young and Free</em>. In 2017 we were nominated for a Grammy Award for 'Best Contemporary Christian Album' for the album <em>Youth Revival</em>. </p>
-        <!-- <ul style="list-style: none;">
-          <li>Bass Guitar</li>
-          <li>Electric Guitar</li>
-          <li>Acoustic Guitar</li>
-          <li>Drums</li>
-          <li>Keyboards</li> -->
-        </ul> 
       </div> 
 
       <div class="card">
@@ -71,9 +64,9 @@
     </main>
     <footer>
       <ul>
-        <li><a href="https://twitter.com/tomfurby" class="social twitter">Twitter</a></li>
-        <li><a href="https://www.linkedin.com/in/tomfurby/" class="social linkedin">LinkedIn</a></li>
-        <li><a href="https://github.com/tomfurby" class="social github">Github</a></li>
+        <li><a href="https://twitter.com/tomfurby" class="social twitter" target="_blank">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/tomfurby/" class="social linkedin" target="_blank">LinkedIn</a></li>
+        <li><a href="https://github.com/tomfurby" class="social github" target="_blank">Github</a></li>
       </ul>
       <p class="copyright">&copy;2019, Tom Furby</p>
     </footer>
