--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul class="nav">
           <li class="name">Tom Furby</li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="pages/experience.html">Experience</a></li>
+          <li><a href="experience.html">Experience</a></li>
         </ul>
     </div>
 
@@ -45,9 +45,9 @@
     </main>
     <footer>
       <ul>
-        <li><a href="https://twitter.com/tomfurby" class="social twitter">Twitter</a></li>
-        <li><a href="https://www.linkedin.com/in/tomfurby/" class="social linkedin">LinkedIn</a></li>
-        <li><a href="https://github.com/tomfurby" class="social github">Github</a></li>
+        <li><a href="https://twitter.com/tomfurby" class="social twitter" target="_blank">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/tomfurby/" class="social linkedin" target="_blank">LinkedIn</a></li>
+        <li><a href="https://github.com/tomfurby" class="social github" target="_blank">Github</a></li>
       </ul>
       <p class="copyright">&copy;2019, Tom Furby</p>
     </footer>
