--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <li>Ruby</li>
         </ul>
         <p>I’d like to work as a freelance Web Developer creating exciting and impressive online experiences for companies and individuals.</p>
+        <p>To contact me, <a href="mailto:tsfurby@gmail.com?subject=Hi">click here</a></p>
       </div> 
 
     </main>
