Added gallery page
Gallery page finished

--- a/experience.html
+++ b/experience.html
@@ -13,13 +13,12 @@
           <li class="name">Tom Furby</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
         </ul>
     </div>
 
     <header>
       <img src="images/profile-photo.jpg" alt="Photo of Tom Furby" class="profile-image">
-      <h1 class="tag name">Hi, I’m Tom Furby</h1>
-      <p class="tag location">My home is Brisbane, Australia.</p>
     </header>
 
     <main class="flex">
