--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
           <li class="name">Tom Furby</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
         </ul>
     </div>
 
